[gd_scene load_steps=2 format=3 uid="uid://cshbk6ompebk2"]

[ext_resource type="Script" path="res://Scripts/snack_grid.gd" id="1_431v6"]

[node name="SnackGrid" type="Control"]
clip_contents = true
custom_minimum_size = Vector2(575, 775)
layout_mode = 3
anchor_right = 0.71875
anchor_bottom = 0.745192
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_431v6")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="SnackSlotGrid" type="GridContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = -2
theme_override_constants/v_separation = 10
columns = 5
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="SlotLabelGrid" type="GridContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 10
columns = 5
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true
